# docs/swagger.yaml
@@ -343,15 +343,12 @@ paths:
       summary: PUT add config to group
       tags:
       - groups
-  /configsGroup/{name}/{version}/{labels}:
+  /configsGroup/{name}/{version}/search:
     delete:
       description: Briše sve konfiguracije u datoj grupi prema navedenim labelama.
+        Labele se prosleđuju kao query parametri (npr. ?label1=value1&label2=value2),
+        a sve navedene labele moraju se poklopiti sa labelama konfiguracije.
       parameters:
-      - description: Key-value pairs of labels to filter configs, e.g. label1=value1&label2=value2...
-        in: path
-        name: labels
-        required: true
-        type: string
       - description: Group name
         in: path
         name: name
@@ -362,6 +359,10 @@ paths:
         name: version
         required: true
         type: integer
+      - description: Labele za filtriranje kao key-value query parametri, npr. label1=value1&label2=value2
+        in: query
+        name: labels
+        type: string
       responses:
         "204":
           description: Konfiguracije u grupi koje odgovaraju labelama su obrisane
@@ -376,12 +377,9 @@ paths:
       - groups
     get:
       description: Vraća sve konfiguracije u datoj grupi prema navedenim labelama.
+        Labele se prosleđuju kao query parametri (npr. ?label1=value1&label2=value2),
+        a sve navedene labele moraju se poklopiti sa labelama konfiguracije.
       parameters:
-      - description: Key-value pairs of labels to filter configs, e.g. label1=value1&label2=value2...
-        in: path
-        name: labels
-        required: true
-        type: string
       - description: Group name
         in: path
         name: name
@@ -392,6 +390,12 @@ paths:
         name: version
         required: true
         type: integer
+      - description: Labele za filtriranje kao key-value query parametri, npr. label1=value1&label2=value2
+        in: query
+        name: labels
+        type: string
+      produces:
+      - application/json
       responses:
         "200":
           description: Konfiguracije u grupi koje odgovaraju labelama
@@ -408,4 +412,6 @@ paths:
       summary: GET all configs in group by labels
       tags:
       - groups
+schemes:
+- http
 swagger: "2.0"
