# handlers/configGroupHandler.go
@@ -347,16 +347,17 @@ func (c ConfigGroupHandler) PutGroup(w http.ResponseWriter, r *http.Request) {
 }
 
 // @Summary GET all configs in group by labels
-// @Description Vraća sve konfiguracije u datoj grupi prema navedenim labelama.
+// @Description Vraća sve konfiguracije u datoj grupi prema navedenim labelama. Labele se prosleđuju kao query parametri (npr. ?label1=value1&label2=value2), a sve navedene labele moraju se poklopiti sa labelama konfiguracije.
 // @Tags groups
-// @Param labels path string true "Key-value pairs of labels to filter configs, e.g. label1=value1&label2=value2..."
+// @Produce json
 // @Param name path string true "Group name"
 // @Param version path int true "Group version"
+// @Param labels query string false "Labele za filtriranje kao key-value query parametri, npr. label1=value1&label2=value2"
 // @Success 200 {object} []model.Config "Konfiguracije u grupi koje odgovaraju labelama"
 // @Failure 404 "Group not found"
 // @Failure 429 "Previše zahteva, pokušajte kasnije"
 // @Failure 500 "Interna greška servera"
-// @Router /configsGroup/{name}/{version}/{labels} [get]
+// @Router /configsGroup/{name}/{version}/search [get]
 func (c ConfigGroupHandler) GetConfigsByLabels(w http.ResponseWriter, r *http.Request) {
 
 	ctx, span := c.tracer.Start(r.Context(), "ConfigGroupHandler.GetConfigsByLabels")
@@ -414,16 +415,16 @@ func (c ConfigGroupHandler) GetConfigsByLabels(w http.ResponseWriter, r *http.Re
 }
 
 // @Summary DELETE remove config from group by labels
-// @Description Briše sve konfiguracije u datoj grupi prema navedenim labelama.
+// @Description Briše sve konfiguracije u datoj grupi prema navedenim labelama. Labele se prosleđuju kao query parametri (npr. ?label1=value1&label2=value2), a sve navedene labele moraju se poklopiti sa labelama konfiguracije.
 // @Tags groups
-// @Param labels path string true "Key-value pairs of labels to filter configs, e.g. label1=value1&label2=value2..."
 // @Param name path string true "Group name"
 // @Param version path int true "Group version"
+// @Param labels query string false "Labele za filtriranje kao key-value query parametri, npr. label1=value1&label2=value2"
 // @Success 204 "Konfiguracije u grupi koje odgovaraju labelama su obrisane"
 // @Failure 404 "Group not found"
 // @Failure 429 "Previše zahteva, pokušajte kasnije"
 // @Failure 500 "Interna greška servera"
-// @Router /configsGroup/{name}/{version}/{labels} [delete]
+// @Router /configsGroup/{name}/{version}/search [delete]
 func (c ConfigGroupHandler) DeleteConfigsByLabels(w http.ResponseWriter, r *http.Request) {
 
 	ctx, span := c.tracer.Start(r.Context(), "ConfigGroupHandler.DeleteConfigsByLabels")
